<resources>
    <string name="app_name">ScanSuite</string>
    <string name="do_something">Do something</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="print">Print</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="nothing_here">There\'s nothing here yet.</string>
    <string name="string_divider">/</string>
    <string name="articleimage_thumb_description">article image thumbnail</string>
    <string name="articleimage_full_description">article image</string>
    <string name="plus_5">+5</string>
    <string name="plus_10">+10</string>
    <string name="plus_max">max</string>
    <string name="minus_5">-5</string>
    <string name="minus_10">-10</string>
    <string name="minus_min">min</string>
    <string name="device_manufacturer">Manufacturer</string>
    <string name="device_brand">Brand</string>
    <string name="device_model">Model</string>
    <string name="device_serialnumber">Serial number</string>
    <string name="android_version">Android version</string>
    <string name="application_version">Version</string>
    <string name="update_file_not_found">Update file not found</string>
    <string name="webservice">Webservice</string>
    <string name="message_downloading">Downloading&#8230;</string>
    <string name="message_webservice_not_live">Can\'t reach the webservice</string>
    <string name="mysettings">My settings</string>
    <string name="iconattribution_freepik">Icons made by Freepik from www.flaticon.com</string>
    <string name="text_copied_to_clipboard">Text was copied to the clipboard</string>
    <string name="text_not_copied_to_clipboard">Text was not copied to the clipboard</string>
    <string name="application_unknown_install_date">Unknown install date</string>
    <string name="label_application_installed">Installed on</string>
    <string name="label_application_last_update">Last update</string>
    <string name="application_unknown_update_date">Unknown update date</string>
    <string name="label_ssid">Network name</string>
    <string name="label_ip">IP number</string>
    <string name="label_internet_connected">Internet?</string>
    <string name="internet_connected">Connected to the internet</string>
    <string name="internet_not_connected">Not connected to the internet</string>
    <string name="choose_workplace">Where would you like to print?</string>
    <string name="screentitle_main">Welcome</string>
    <string name="screentitle_settings">Settings</string>
    <string name="screentitle_support">Support and info</string>
    <string name="screentitle_language">Language</string>
    <string name="screentitle_datetime">Date and time</string>
    <string name="logo_description">ScanSuite logo</string>
    <string name="text_gettingready">Just a minute, we\'re getting things ready.</string>
    <string name="button_get_started">Get started</string>
    <string name="question_no_internet_open_settings">Looks like this device is not connected to the internet. Do you want to open the internet settings screen?</string>
    <string name="open">open</string>
    <string name="identifier">Identifier</string>
    <string name="info">Info</string>
    <string name="destination">Destination</string>
    <string name="question_no_internet_open_settings_title">No internet</string>
    <string name="mainmenu_title">Scansuite menu</string>
    <string name="actionsmenu_title">Actions</string>
    <string name="mainmenu_home">Home</string>
    <string name="mainmenu_menu">Menu</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="mainmenu_support">Support and info</string>
    <string name="mainmenu_language">Language</string>
    <string name="mainmenu_datetime">Date and time</string>
    <string name="mainmenu_environments">Environments</string>
    <string name="mainmenu_proglove">Pair ProGlove</string>
    <string name="mainmenu_close_application">Close application</string>
    <string name="changelanguage_description">Change language</string>
    <string name="changedatetime_description">Change date and time</string>
    <string name="tab_support_network">Network</string>
    <string name="tab_support_application">Application</string>
    <string name="tab_support_device">Device</string>
    <string name="error_couldnt_get_ip">Couldn\'t get the ip number</string>
    <string name="error_couldnt_get_ssid">Couldn\'t get the network name</string>
    <string name="label_connectiontype">Connection type</string>
    <string name="connectiontype_none">Not connected</string>
    <string name="connectiontype_wifi">WiFi</string>
    <string name="connectiontype_ethernet">Ethernet</string>
    <string name="connectiontype_mobiledata">Mobile data</string>
    <string name="connectiontype_unknown">I don\'t know</string>
    <string name="screentitle_menu">Menu</string>
    <string name="menuitem_external_return">Picking return supplier</string>
    <string name="menuitem_intake">Reception and Storage</string>
    <string name="menuitem_intake_eo">External reception</string>
    <string name="menuitem_intake_ma">Storage reception</string>
    <string name="menuitem_intake_om">Internal reception</string>
    <string name="menuitem_intake_close">Close reception</string>
    <string name="menuitem_inventory">Inventory</string>
    <string name="menuitem_inventoryclose">Inventory close</string>
    <string name="menuitem_move">Move</string>
    <string name="menuitem_move_mi">Move (only place)</string>
    <string name="menuitem_move_mi_singlepiece">Move (only place singlepiece)</string>
    <string name="menuitem_move_mo">Move (only pick)</string>
    <string name="menuitem_move_mv">Move (pick and place)</string>
    <string name="menuitem_moveitem">Move item</string>
    <string name="menuitem_pick">Pick</string>
    <string name="menuitem_pick_pf">Pick store</string>
    <string name="menuitem_pick_pv">Pick salesorder</string>
    <string name="menuitem_return">Returns</string>
    <string name="menuitem_selfpick">Picking done by client</string>
    <string name="menuitem_sort">Sorting</string>
    <string name="menuitem_ship">Shipping</string>
    <string name="menuitem_store">Store weborders</string>
    <string name="menuitem_finish_ship">Finish Shipping</string>
    <string name="menuitem_qc">Quality Control</string>
    <string name="menuitem_pack_and_ship">Pack and Ship</string>
    <string name="menuitem_pack_and_ship_merge">Pack and Ship Merge</string>
    <string name="ordertype_bc">Batch picking sorting per VKO</string>
    <string name="ordertype_bm">Batch pick manual sorting</string>
    <string name="ordertype_bm_singlepiece">Batch pick manual sorting, single piece</string>
    <string name="ordertype_bp">Batch picking</string>
    <string name="ordertype_eom">External reception Multi-user</string>
    <string name="ordertype_eoom">External reception and Storage Multi-user</string>
    <string name="ordertype_eoos">External reception and Storage Single-user</string>
    <string name="ordertype_eor">Registratie external reception</string>
    <string name="ordertype_eos">External reception Single-user</string>
    <string name="ordertype_er">Return supplier</string>
    <string name="ordertype_ivm">Stocktaking Multi-user</string>
    <string name="ordertype_ivs">Stocktaking Single-user</string>
    <string name="ordertype_mam">Storage reception Multi-user</string>
    <string name="ordertype_mas">Storage reception Single-user</string>
    <string name="ordertype_mat">Storage reception through task</string>
    <string name="ordertype_mi">Move place</string>
    <string name="ordertype_mo">Move take</string>
    <string name="ordertype_mt">Move task</string>
    <string name="ordertype_mv">Move</string>
    <string name="ordertype_mvi">Move item</string>
    <string name="ordertype_omm">Internal reception Multi-user</string>
    <string name="ordertype_omom">Internal reception and Storage Multi-user</string>
    <string name="ordertype_omos">Internal reception and Storage Single-user</string>
    <string name="ordertype_omr">Registration internal reception</string>
    <string name="ordertype_oms">Internal reception Single-user</string>
    <string name="ordertype_pa">Picking transfer / item</string>
    <string name="ordertype_pf">Picking transfer / branch</string>
    <string name="ordertype_pv">Pick and sort</string>
    <string name="ordertype_rvr">Registration Return sales</string>
    <string name="ordertype_rvs">Return sales</string>
    <string name="ordertype_spv">Selfpicking</string>
    <string name="ordertype_unknown">Unknown</string>
    <string name="ordertype_combined">Combined</string>
    <string name="ordertype_self_generated">Self Generated</string>
    <string name="filter_orderlines_title">Show orders that are: </string>
    <string name="filter_orderlines_enable">Use filters</string>
    <string name="filter_orderlines_enable_summary">Enable or disable all filters below</string>
    <string name="filter_orderlines_enable_key_pick" translatable="false">FILTERORDERLINES_ENABLE_PICK</string>
    <string name="filter_orderlines_enable_key_inventory" translatable="false">FILTERORDERLINES_ENABLE_INVENTORY</string>
    <string name="filter_orderlines_processing">Being processed or on hold</string>
    <string name="filter_orderlines_processing_summary_on">Showing these</string>
    <string name="filter_orderlines_processing_summary_off">Not showing these</string>
    <string name="filter_orderlines_processing_key" translatable="false">FILTERORDERLINES_PROCESSING</string>
    <string name="filter_orderlines_singlearticles">Single articles pick</string>
    <string name="filter_orderlines_singlearticles_summary_on">Showing ONLY single articles</string>
    <string name="filter_orderlines_singlearticles_key" translatable="false">FILTERORDERLINES_SINGLEARTICLES</string>
    <string name="filter_orderlines_my_orders">Assigned to me</string>
    <string name="filter_orderlines_my_orders_key" translatable="false">FILTERORDERLINES_MYORDERS</string>
    <string name="filter_orderlines_their_orders">Assigned to someone else</string>
    <string name="filter_orderlines_their_orders_key" translatable="false">FILTERORDERLINES_THEIRORDERS</string>
    <string name="filter_orderlines_nobodys_orders">Not assigned to anyone</string>
    <string name="filter_orderlines_nobodys_orders_key" translatable="false">FILTERORDERLINES_NOBODYSORDERS</string>
    <string name="filter_orderlines_apply_key" translatable="false">FILTERORDERLINES_APPLY</string>
    <string name="filter_orderlines_apply">Click or swipe down to apply</string>
    <string name="choose_packiging_title">Choose packaging</string>
    <string name="choose_packiging_subtitle">Click item to change quantity</string>
    <string name="add_environment">Add environment</string>
    <string name="environment_label_description">Description</string>
    <string name="environment_hint_description">description</string>
    <string name="environment_label_name">Name</string>
    <string name="save">Save</string>
    <string name="environment_label_url">URL</string>
    <string name="environment_hint_url">url</string>
    <string name="environment_hint_name">name</string>
    <string name="show_all">Show all</string>
    <string name="bin_stock">BIN stock</string>
    <string name="new_container">Add new container</string>
    <string name="switch_container">Switch container</string>
    <string name="barcode_info">Barcode info</string>
    <string name="article_stock">Article stock</string>
    <string name="pair_pro_glove">Pair Pro Glove</string>
    <string name="combine_picks">Combine Picks</string>
    <string name="select_single_pick">Select single pick</string>
    <string name="print_BIN">Print BIN</string>
    <string name="print_Article">Print Article</string>
</resources>