<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="@string/filter_orderlines_enable_key"
        android:title="@string/filter_orderlines_enable"
        android:summary="@string/filter_orderlines_enable_summary"
        android:icon="@drawable/ic_nofilter_black_24dp"
        android:defaultValue="true"
        />
    <PreferenceCategory
        android:title="@string/filter_orderlines_title">
        <SwitchPreference
            android:key="@string/filter_orderlines_processing_key"
            android:title="@string/filter_orderlines_processing"
            android:icon="@drawable/ic_coffee_black_24dp"
            android:summaryOff="@string/show_all"
            android:summaryOn="@string/filter_orderlines_processing_summary_on"
            android:dependency="@string/filter_orderlines_enable_key"
            android:defaultValue="true"
        />
        <!--android:summary="@string/filter_orderlines_processing_summary"-->
        <SwitchPreference
            android:key="@string/filter_orderlines_singlearticles_key"
            android:title="@string/filter_orderlines_singlearticles"
            android:summaryOn="@string/filter_orderlines_singlearticles_summary_on"
            android:summaryOff="@string/show_all"
            android:icon="@drawable/ic_circle_one_black_24p"
            android:dependency="@string/filter_orderlines_enable_key"
            android:defaultValue="true"
            />
        <!--android:summary="@string/filter_orderlines_singlearticles_summary"-->
        <SwitchPreference
            android:key="@string/filter_orderlines_my_orders_key"
            android:title="@string/filter_orderlines_my_orders"
            android:icon="@drawable/ic_me_black_24dp"
            android:dependency="@string/filter_orderlines_enable_key"
            android:defaultValue="true"
            />
        <!--android:summary="@string/filter_orderlines_my_orders_summary"-->
        <SwitchPreference
            android:key="@string/filter_orderlines_their_orders_key"
            android:title="@string/filter_orderlines_their_orders"
            android:icon="@drawable/ic_others_black_24dp"
            android:dependency="@string/filter_orderlines_enable_key"
            android:defaultValue="true"
            />
        <!--android:summary="@string/filter_orderlines_their_orders_summary"-->
        <SwitchPreference
            android:key="@string/filter_orderlines_nobodys_orders_key"
            android:title="@string/filter_orderlines_nobodys_orders"
            android:icon="@drawable/ic_nobody_black_24dp"
            android:dependency="@string/filter_orderlines_enable_key"
            android:defaultValue="true"
            />
        <!--android:summary="@string/filter_orderlines_nobodys_orders_summary"-->
    </PreferenceCategory>
    <Preference
        android:title="@string/filter_orderlines_apply"
        android:key="@string/filter_orderlines_apply_key"
        />
</PreferenceScreen>