<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group >
    <item
        android:id="@+id/item_combine_picks"
        android:title="@string/combine_picks"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_select_single_pick"
        android:title="@string/select_single_pick"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_print_bin"
        android:title="@string/print_BIN"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_bin_stock"
        android:title="@string/bin_stock"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_article_stock"
        android:title="@string/article_stock"
        android:icon="@drawable/ic_baseline_pageview_24"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_print_item"
        android:title="@string/print_Article"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_pair_proglove"
        android:title="@string/pair_pro_glove"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_new_container"
        android:title="@string/new_container"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_switch_container"
        android:title="@string/switch_container"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
</group>
</menu>