<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="8dp"
    >
    <TextView
        android:id="@+id/textViewAddEnvironment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_environment"
        android:textSize="@dimen/textsize_big"
        android:textColor="@color/colorTextDarkest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textViewEnvironmentLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/environment_label_name"
        android:textSize="@dimen/textsize_normal"
        android:textColor="@color/colorTextDarkest"
        app:layout_constraintTop_toBottomOf="@id/textViewAddEnvironment"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:id="@+id/editTextEnvironmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/environment_hint_name"
        app:layout_constraintTop_toBottomOf="@id/textViewEnvironmentLabelName"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textViewEnvironmentLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/environment_label_description"
        android:textSize="@dimen/textsize_normal"
        android:textColor="@color/colorTextDarkest"
        app:layout_constraintTop_toBottomOf="@id/editTextEnvironmentName"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:id="@+id/editTextEnvironmentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/environment_hint_description"
        app:layout_constraintTop_toBottomOf="@id/textViewEnvironmentLabelDescription"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textViewEnvironmentLabelUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/environment_label_url"
        android:textSize="@dimen/textsize_normal"
        android:textColor="@color/colorTextDarkest"
        app:layout_constraintTop_toBottomOf="@id/editTextEnvironmentDescription"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:id="@+id/editTextEnvironmentUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/environment_hint_url"
        app:layout_constraintTop_toBottomOf="@id/textViewEnvironmentLabelUrl"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>