<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group >
    <item
        android:id="@+id/item_bin_stock"
        android:title="@string/bin_stock"
        android:icon="@drawable/ic_location_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_article_stock"
        android:title="@string/article_stock"
        android:icon="@drawable/ic_baseline_pageview_24"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/item_barcodeinfo"
        android:title="@string/barcode_info"
        android:icon="@drawable/ic_barcodescan_black_24dp"
        app:showAsAction="never"
        android:visible="false"
        />
</group>
</menu>