<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="8dp"
    >
        <TextView
            android:id="@+id/textViewChoosePackaging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_packiging_title"
            android:textSize="@dimen/textsize_big"
            android:textColor="@color/colorTextDarkest"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/textViewChoosePackagingSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_packiging_subtitle"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/colorTextLighter"
            app:layout_constraintTop_toBottomOf="@id/textViewChoosePackaging"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/shippingUnitRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/textViewChoosePackagingSubtitle"
        app:layout_constraintBottom_toTopOf="@id/buttonClose"
        android:scrollbars="vertical"
        >
    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>